[gd_scene load_steps=6 format=3 uid="uid://bf3jay3y84v7f"]

[ext_resource type="Script" path="res://source/shared_ui/pause_menu/pause_menu.gd" id="1_jcbkw"]
[ext_resource type="Theme" uid="uid://duscod7gw58fs" path="res://theming/default.tres" id="2_hcuxy"]
[ext_resource type="Texture2D" uid="uid://cd4oharpsgyrw" path="res://main_menu/assets/buttons/back_normal.png" id="3_4ayd5"]
[ext_resource type="Texture2D" uid="uid://cgsnfqj18rr3q" path="res://main_menu/assets/buttons/back_selected.png" id="4_yvikv"]
[ext_resource type="PackedScene" uid="uid://biao7eeq4hdvg" path="res://source/shared_ui/settings_ui/settings_ui.tscn" id="5_fq263"]

[node name="pause_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jcbkw")

[node name="outline" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 300)

[node name="inline" type="ColorRect" parent="outline"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 300)
color = Color(0, 0, 0, 1)

[node name="main" type="Control" parent="outline/inline"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="outline/inline/main"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 148.0
grow_horizontal = 2
theme = ExtResource("2_hcuxy")
theme_override_font_sizes/font_size = 100
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back" type="TextureButton" parent="outline/inline/main"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 44.0
offset_bottom = 44.0
scale = Vector2(5, 5)
texture_normal = ExtResource("3_4ayd5")
texture_hover = ExtResource("4_yvikv")

[node name="settings" type="Button" parent="outline/inline/main"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -40.5
offset_right = -50.0
offset_bottom = 40.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_hcuxy")
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="main_menu" type="Button" parent="outline/inline/main"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = 62.5
offset_right = -50.0
offset_bottom = 143.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_hcuxy")
theme_override_font_sizes/font_size = 50
text = "Main menu"

[node name="settings_ui" parent="." instance=ExtResource("5_fq263")]
visible = false
layout_mode = 1

[connection signal="pressed" from="outline/inline/main/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="outline/inline/main/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="outline/inline/main/main_menu" to="." method="_on_main_menu_pressed"]
